update swiper slide text-content

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/icon.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart.Subscription</title>
-  <style>
+  <!-- <style>
     .bg1 {
       background-image: "url(./Subscription Box 1.jpg)";
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
